version: "0.003"
name: "cppffigen"
opam-version: "2.0"
synopsis: "A C++ foreign-function-interface generator for Ocaml based on C++ STL Containers"
license: "Apache-2.0"
maintainer: "Chet Murthy <chetsky@gmail.com>"
authors: "Chet Murthy <chetsky@gmail.com>"
homepage: "https://github.com/chetmurthy/ocaml-cppffigen"
bug-reports: "Chet Murthy <chetsky@gmail.com>"
depends: [
  "ppx_deriving" { >= "5.2.1" }
  "pa_ppx" { >= "0.17" }
  "sexplib" { >= "v0.14.0" }
  "cmdliner" { >= "1.0.4" }
]
build: [
  [make "all"]
  [make "test"] { with-test }
]
install: [make "install"]
dev-repo: "git+https://github.com/chetmurthy/ocaml-cppffigen"
url {
  src: ""
  checksum: [
    "sha512="
  ]
}
